Small fixes for mobile alignment

--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -37,7 +37,6 @@ footer {
     width: 100%;
     overflow: hidden;
     display: block;
-	min-height: 130px;
 }
 
 #banner * {
@@ -100,6 +99,7 @@ footer {
 	text-align: center;
 	max-width: 960px;
 	margin: 0 auto;
+	height: 100% !important;
 }
 
 #navbarCollapse ul {
